UEFIParser.py
# Generated from UEFI.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class UEFIParser ( Parser ):

    grammarFileName = "UEFI.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'='", "';'", "'('", "')'", 
                     "','", "'{'", "'}'", "'.'", "'->'", "'while'", "'return'", 
                     "'<'", "'>'", "'=='", "'!='", "'>='", "'<='", "'void'", 
                     "'EFI_STATUS'", "'EFI_HANDLE'", "'EFI_SYSTEM_TABLE'", 
                     "'EFI_INPUT_KEY'", "'EFI_TEXT_ATTR'", "'EFI_SUCCESS'", 
                     "'UINTN'", "'CHAR16'", "'CHAR8'", "'NULL'", "'EFI_YELLOW'", 
                     "'EFI_GREEN'", "'EFI_RED'", "'EFI_BLACK'", "'EfiResetShutdown'", 
                     "'*'", "'&'", "'//'", "'\\r'", "'\\n'", "'/*'", "'*/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING", "CHAR_LITERAL", 
                      "INT_LITERAL", "FLOAT_LITERAL", "IDENTIFIER", "WS" ]

    RULE_compilationUnit = 0
    RULE_statement = 1
    RULE_includeStatement = 2
    RULE_variableDeclaration = 3
    RULE_functionDeclaration = 4
    RULE_parameterList = 5
    RULE_parametr = 6
    RULE_block = 7
    RULE_warning = 8
    RULE_expressionStatement = 9
    RULE_expression = 10
    RULE_assignmentExpression = 11
    RULE_methodCall = 12
    RULE_argumentList = 13
    RULE_whileStatement = 14
    RULE_condition = 15
    RULE_exit = 16
    RULE_operator = 17
    RULE_literal = 18
    RULE_type = 19
    RULE_identifier = 20
    RULE_macros = 21
    RULE_cursor = 22
    RULE_link = 23
    RULE_comment = 24

    ruleNames =  [ "compilationUnit", "statement", "includeStatement", "variableDeclaration", 
                   "functionDeclaration", "parameterList", "parametr", "block", 
                   "warning", "expressionStatement", "expression", "assignmentExpression", 
                   "methodCall", "argumentList", "whileStatement", "condition", 
                   "exit", "operator", "literal", "type", "identifier", 
                   "macros", "cursor", "link", "comment" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    STRING=42
    CHAR_LITERAL=43
    INT_LITERAL=44
    FLOAT_LITERAL=45
    IDENTIFIER=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(UEFIParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UEFIParser.StatementContext)
            else:
                return self.getTypedRuleContext(UEFIParser.StatementContext,i)


        def functionDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UEFIParser.FunctionDeclarationContext)
            else:
                return self.getTypedRuleContext(UEFIParser.FunctionDeclarationContext,i)


        def getRuleIndex(self):
            return UEFIParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = UEFIParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137713830856706) != 0):
                self.state = 52
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 50
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 51
                    self.functionDeclaration()
                    pass


                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(UEFIParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def includeStatement(self):
            return self.getTypedRuleContext(UEFIParser.IncludeStatementContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(UEFIParser.VariableDeclarationContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(UEFIParser.ExpressionStatementContext,0)


        def comment(self):
            return self.getTypedRuleContext(UEFIParser.CommentContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(UEFIParser.WhileStatementContext,0)


        def getRuleIndex(self):
            return UEFIParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = UEFIParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.includeStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.variableDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.expressionStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.comment()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 63
                self.whileStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(UEFIParser.STRING, 0)

        def getRuleIndex(self):
            return UEFIParser.RULE_includeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeStatement" ):
                listener.enterIncludeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeStatement" ):
                listener.exitIncludeStatement(self)




    def includeStatement(self):

        localctx = UEFIParser.IncludeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_includeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(UEFIParser.T__0)
            self.state = 67
            self.match(UEFIParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(UEFIParser.TypeContext,0)


        def cursor(self):
            return self.getTypedRuleContext(UEFIParser.CursorContext,0)


        def identifier(self):
            return self.getTypedRuleContext(UEFIParser.IdentifierContext,0)


        def expression(self):
            return self.getTypedRuleContext(UEFIParser.ExpressionContext,0)


        def getRuleIndex(self):
            return UEFIParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = UEFIParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.type_()
                self.state = 70
                self.cursor()
                self.state = 71
                self.identifier()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 72
                    self.match(UEFIParser.T__1)
                    self.state = 73
                    self.expression()


                self.state = 76
                self.match(UEFIParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.type_()
                self.state = 79
                self.identifier()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 80
                    self.match(UEFIParser.T__1)
                    self.state = 81
                    self.expression()


                self.state = 84
                self.match(UEFIParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(UEFIParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(UEFIParser.IdentifierContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(UEFIParser.ParameterListContext,0)


        def block(self):
            return self.getTypedRuleContext(UEFIParser.BlockContext,0)


        def macros(self):
            return self.getTypedRuleContext(UEFIParser.MacrosContext,0)


        def getRuleIndex(self):
            return UEFIParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = UEFIParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.type_()
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 89
                self.macros()


            self.state = 92
            self.identifier()
            self.state = 93
            self.match(UEFIParser.T__3)
            self.state = 94
            self.parameterList()
            self.state = 95
            self.match(UEFIParser.T__4)
            self.state = 96
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UEFIParser.ParametrContext)
            else:
                return self.getTypedRuleContext(UEFIParser.ParametrContext,i)


        def getRuleIndex(self):
            return UEFIParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = UEFIParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.parametr()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 99
                self.match(UEFIParser.T__5)
                self.state = 100
                self.parametr()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(UEFIParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(UEFIParser.IdentifierContext,0)


        def cursor(self):
            return self.getTypedRuleContext(UEFIParser.CursorContext,0)


        def getRuleIndex(self):
            return UEFIParser.RULE_parametr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametr" ):
                listener.enterParametr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametr" ):
                listener.exitParametr(self)




    def parametr(self):

        localctx = UEFIParser.ParametrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parametr)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.type_()
                self.state = 107
                self.identifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.type_()
                self.state = 110
                self.cursor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exit(self):
            return self.getTypedRuleContext(UEFIParser.ExitContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UEFIParser.StatementContext)
            else:
                return self.getTypedRuleContext(UEFIParser.StatementContext,i)


        def warning(self):
            return self.getTypedRuleContext(UEFIParser.WarningContext,0)


        def getRuleIndex(self):
            return UEFIParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = UEFIParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(UEFIParser.T__6)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137713830856706) != 0):
                    self.state = 115
                    self.statement()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 121
                self.exit()
                self.state = 122
                self.match(UEFIParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(UEFIParser.T__6)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 125
                    self.warning()


                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137713830856706) != 0):
                    self.state = 128
                    self.statement()
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 134
                self.exit()
                self.state = 135
                self.match(UEFIParser.T__7)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.match(UEFIParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WarningContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(UEFIParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(UEFIParser.IdentifierContext,0)


        def getRuleIndex(self):
            return UEFIParser.RULE_warning

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWarning" ):
                listener.enterWarning(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWarning" ):
                listener.exitWarning(self)




    def warning(self):

        localctx = UEFIParser.WarningContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_warning)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(UEFIParser.T__3)
            self.state = 141
            self.type_()
            self.state = 142
            self.match(UEFIParser.T__4)
            self.state = 143
            self.identifier()
            self.state = 144
            self.match(UEFIParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(UEFIParser.ExpressionContext,0)


        def getRuleIndex(self):
            return UEFIParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)




    def expressionStatement(self):

        localctx = UEFIParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.expression()
            self.state = 147
            self.match(UEFIParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpression(self):
            return self.getTypedRuleContext(UEFIParser.AssignmentExpressionContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(UEFIParser.MethodCallContext,0)


        def literal(self):
            return self.getTypedRuleContext(UEFIParser.LiteralContext,0)


        def identifier(self):
            return self.getTypedRuleContext(UEFIParser.IdentifierContext,0)


        def link(self):
            return self.getTypedRuleContext(UEFIParser.LinkContext,0)


        def cursor(self):
            return self.getTypedRuleContext(UEFIParser.CursorContext,0)


        def type_(self):
            return self.getTypedRuleContext(UEFIParser.TypeContext,0)


        def getRuleIndex(self):
            return UEFIParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = UEFIParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.assignmentExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.methodCall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.literal()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.identifier()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 153
                self.link()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 154
                self.cursor()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 155
                self.type_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(UEFIParser.IdentifierContext,0)


        def expression(self):
            return self.getTypedRuleContext(UEFIParser.ExpressionContext,0)


        def getRuleIndex(self):
            return UEFIParser.RULE_assignmentExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentExpression" ):
                listener.enterAssignmentExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentExpression" ):
                listener.exitAssignmentExpression(self)




    def assignmentExpression(self):

        localctx = UEFIParser.AssignmentExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignmentExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.identifier()
            self.state = 159
            self.match(UEFIParser.T__1)
            self.state = 160
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UEFIParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(UEFIParser.IdentifierContext,i)


        def argumentList(self):
            return self.getTypedRuleContext(UEFIParser.ArgumentListContext,0)


        def getRuleIndex(self):
            return UEFIParser.RULE_methodCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodCall" ):
                listener.enterMethodCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodCall" ):
                listener.exitMethodCall(self)




    def methodCall(self):

        localctx = UEFIParser.MethodCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_methodCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.identifier()
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==10:
                self.state = 167
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [9]:
                    self.state = 163
                    self.match(UEFIParser.T__8)
                    self.state = 164
                    self.identifier()
                    pass
                elif token in [10]:
                    self.state = 165
                    self.match(UEFIParser.T__9)
                    self.state = 166
                    self.identifier()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(UEFIParser.T__3)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 136476880273408) != 0):
                self.state = 173
                self.argumentList()


            self.state = 176
            self.match(UEFIParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UEFIParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(UEFIParser.ExpressionContext,i)


        def getRuleIndex(self):
            return UEFIParser.RULE_argumentList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentList" ):
                listener.enterArgumentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentList" ):
                listener.exitArgumentList(self)




    def argumentList(self):

        localctx = UEFIParser.ArgumentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_argumentList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.expression()
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6 or _la==10:
                self.state = 183
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6]:
                    self.state = 179
                    self.match(UEFIParser.T__5)
                    self.state = 180
                    self.expression()
                    pass
                elif token in [10]:
                    self.state = 181
                    self.match(UEFIParser.T__9)
                    self.state = 182
                    self.expression()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'
